refactor: best album 추가 기능 리팩토링